[gd_scene load_steps=6 format=3 uid="uid://bp6lsa7yg0glj"]

[ext_resource type="Script" path="res://addons/color_swapper/color_swapper_dock.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://tlbjdm6gaqi8" path="res://addons/color_swapper/color_box.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dt6b50d30wiyr" path="res://addons/color_swapper/color_selector.tscn" id="3"]
[ext_resource type="Shader" path="res://addons/color_swapper/color_swapper_dock.gdshader" id="4_ikyin"]

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("4_ikyin")
cycle_enabled = null
selected_col_linear = null

[node name="Colors" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
color_box_scene = ExtResource("2")
color_selector_scene = ExtResource("3")

[node name="ModeToolbar" type="HBoxContainer" parent="."]
offset_right = 235.0
offset_bottom = 31.0

[node name="Filler" type="Control" parent="ModeToolbar"]
layout_mode = 3
anchors_preset = 0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="PartModeButton" type="Button" parent="ModeToolbar"]
offset_left = 4.0
offset_right = 53.0
offset_bottom = 31.0
toggle_mode = true
text = "Parts"

[node name="PaletteModeButton" type="Button" parent="ModeToolbar"]
offset_left = 57.0
offset_right = 120.0
offset_bottom = 31.0
toggle_mode = true
text = "Palette"

[node name="ImageModeButton" type="Button" parent="ModeToolbar"]
offset_left = 124.0
offset_right = 188.0
offset_bottom = 31.0
toggle_mode = true
text = "Images"

[node name="RunModeButton" type="Button" parent="ModeToolbar"]
offset_left = 192.0
offset_right = 231.0
offset_bottom = 31.0
toggle_mode = true
text = "Run"

[node name="Filler2" type="Control" parent="ModeToolbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 235.0
offset_right = 235.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="PartModeControls" type="VBoxContainer" parent="."]
visible = false
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PartModeControls"]

[node name="PartAddInput" type="LineEdit" parent="PartModeControls/HBoxContainer"]
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="PartAddButton" type="Button" parent="PartModeControls/HBoxContainer"]
disabled = true
text = "Add"

[node name="PartTree" type="Tree" parent="PartModeControls"]
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="PaletteModeControls" type="VBoxContainer" parent="."]
visible = false
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteModeControls"]

[node name="Label" type="Label" parent="PaletteModeControls/HBoxContainer"]
text = "Grid size"

[node name="PaletteWidth" type="SpinBox" parent="PaletteModeControls/HBoxContainer"]
min_value = 1.0
max_value = 64.0
value = 8.0

[node name="PaletteHeight" type="SpinBox" parent="PaletteModeControls/HBoxContainer"]
min_value = 1.0
max_value = 64.0
value = 8.0

[node name="ScrollContainer" type="ScrollContainer" parent="PaletteModeControls"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PaletteGrid" type="GridContainer" parent="PaletteModeControls/ScrollContainer"]
size_flags_horizontal = 5
columns = 8

[node name="PaletteEditColorButton" type="Button" parent="PaletteModeControls"]
disabled = true
text = "Edit color"

[node name="HBoxContainer2" type="HBoxContainer" parent="PaletteModeControls"]

[node name="PalettePartOptions" type="OptionButton" parent="PaletteModeControls/HBoxContainer2"]
size_flags_horizontal = 3
disabled = true
clip_text = true

[node name="PalettePartAddButton" type="Button" parent="PaletteModeControls/HBoxContainer2"]
disabled = true
text = "Add"

[node name="PalettePartTree" type="Tree" parent="PaletteModeControls"]
size_flags_horizontal = 3
hide_root = true

[node name="ImageModeControls" type="VBoxContainer" parent="."]
offset_top = 35.0
offset_right = 235.0
offset_bottom = 137.0
size_flags_vertical = 3

[node name="ImagePathAddButton" type="Button" parent="ImageModeControls"]
offset_right = 235.0
offset_bottom = 31.0
text = "Add"

[node name="ImageTree" type="Tree" parent="ImageModeControls"]
offset_top = 35.0
offset_right = 235.0
offset_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
select_mode = 1

[node name="ImagePreview" type="TextureRect" parent="ImageModeControls"]
texture_filter = 1
texture_repeat = 1
material = SubResource("2")
offset_top = 39.0
offset_right = 235.0
offset_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="ImageModeControls"]
offset_top = 43.0
offset_right = 235.0
offset_bottom = 74.0

[node name="ImageTargetInput" type="LineEdit" parent="ImageModeControls/HBoxContainer"]
offset_right = 165.0
offset_bottom = 31.0
size_flags_horizontal = 3
editable = false

[node name="ImageTargetBrowseButton" type="Button" parent="ImageModeControls/HBoxContainer"]
offset_left = 169.0
offset_right = 235.0
offset_bottom = 31.0
disabled = true
text = "Browse"

[node name="ImageColorTree" type="Tree" parent="ImageModeControls"]
offset_top = 78.0
offset_right = 235.0
offset_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
hide_root = true
select_mode = 1

[node name="ImagePartOptions" type="OptionButton" parent="ImageModeControls"]
offset_top = 82.0
offset_right = 235.0
offset_bottom = 102.0
size_flags_horizontal = 3
clip_text = true

[node name="RunModeControls" type="VBoxContainer" parent="."]
offset_top = 141.0
offset_right = 235.0
offset_bottom = 207.0
size_flags_vertical = 3

[node name="RunButton" type="Button" parent="RunModeControls"]
offset_right = 235.0
offset_bottom = 31.0
text = "Run"

[node name="AutoRunCheckbox" type="CheckBox" parent="RunModeControls"]
offset_top = 35.0
offset_right = 235.0
offset_bottom = 66.0
text = "Autorun"

[connection signal="pressed" from="ModeToolbar/PartModeButton" to="." method="_on_PartModeButton_pressed"]
[connection signal="pressed" from="ModeToolbar/PaletteModeButton" to="." method="_on_PaletteModeButton_pressed"]
[connection signal="pressed" from="ModeToolbar/ImageModeButton" to="." method="_on_ImageModeButton_pressed"]
[connection signal="pressed" from="ModeToolbar/RunModeButton" to="." method="_on_RunModeButton_pressed"]
[connection signal="text_changed" from="PartModeControls/HBoxContainer/PartAddInput" to="." method="_on_PartAddInput_text_changed"]
[connection signal="pressed" from="PartModeControls/HBoxContainer/PartAddButton" to="." method="_on_PartAddButton_pressed"]
[connection signal="changed" from="PaletteModeControls/HBoxContainer/PaletteWidth" to="." method="_on_PaletteWidth_changed"]
[connection signal="value_changed" from="PaletteModeControls/HBoxContainer/PaletteWidth" to="." method="_on_PaletteWidth_value_changed"]
[connection signal="changed" from="PaletteModeControls/HBoxContainer/PaletteHeight" to="." method="_on_PaletteHeight_changed"]
[connection signal="value_changed" from="PaletteModeControls/HBoxContainer/PaletteHeight" to="." method="_on_PaletteHeight_value_changed"]
[connection signal="pressed" from="PaletteModeControls/PaletteEditColorButton" to="." method="_on_PaletteEditColorButton_pressed"]
[connection signal="item_selected" from="PaletteModeControls/HBoxContainer2/PalettePartOptions" to="." method="_on_PalettePartOptions_item_selected"]
[connection signal="mouse_entered" from="PaletteModeControls/HBoxContainer2/PalettePartOptions" to="." method="_on_PalettePartOptions_mouse_entered"]
[connection signal="mouse_exited" from="PaletteModeControls/HBoxContainer2/PalettePartOptions" to="." method="_on_PalettePartOptions_mouse_exited"]
[connection signal="pressed" from="PaletteModeControls/HBoxContainer2/PalettePartAddButton" to="." method="_on_PalettePartAddButton_pressed"]
[connection signal="pressed" from="ImageModeControls/ImagePathAddButton" to="." method="_on_ImagePathAddButton_pressed"]
[connection signal="item_selected" from="ImageModeControls/ImageTree" to="." method="_on_ImageTree_item_selected"]
[connection signal="mouse_entered" from="ImageModeControls/ImagePreview" to="." method="_on_ImagePreview_mouse_entered"]
[connection signal="mouse_exited" from="ImageModeControls/ImagePreview" to="." method="_on_ImagePreview_mouse_exited"]
[connection signal="text_changed" from="ImageModeControls/HBoxContainer/ImageTargetInput" to="." method="_on_ImageTargetInput_text_changed"]
[connection signal="pressed" from="ImageModeControls/HBoxContainer/ImageTargetBrowseButton" to="." method="_on_ImageTargetBrowseButton_pressed"]
[connection signal="item_selected" from="ImageModeControls/ImageColorTree" to="." method="_on_ImageColorTree_item_selected"]
[connection signal="item_selected" from="ImageModeControls/ImagePartOptions" to="." method="_on_ImagePartOptions_item_selected"]
[connection signal="pressed" from="RunModeControls/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="toggled" from="RunModeControls/AutoRunCheckbox" to="." method="_on_AutoRunCheckbox_toggled"]
